# rs-whisper-stream

./: Cargo.toml  README.md
examples/: file_stream.rs
src/: lib.rs  mel.rs  multilingual.rs
